--- a/4.Function-OOPS.ipynb
+++ b/4.Function-OOPS.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "03e12b30-b10e-45d3-ae0c-e98286187fa1",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "id": "8c7cb315-8cd9-42cb-ba45-4bd3cb22e98c",
    "metadata": {},
    "outputs": [
@@ -59,50 +59,22 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter the number: 9\n"
+      "Enter Age: 30\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Odd Number\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'Odd Number'"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "oddEven()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "dc661c9b-d662-48dc-99d4-e542730947ea",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The Given number is Odd\n"
+      "Adult\n",
+      "Adult\n"
      ]
     }
    ],
    "source": [
-    "if (message1==\"Even Number\"):\n",
-    "    print(\"The Given number is Even\")\n",
-    "else:\n",
-    "    print(\"The Given number is Odd\")"
+    "age=int(input(\"Enter Age:\"))\n",
+    "agecat=AgeCategory()\n",
+    "print(agecat)"
    ]
   },
   {
